test/expected/cli/shitbox_calc.out
=== precedence ===
14
=== parentheses and power ===
27
=== 128-bit in the default mood ===
1267650600228229401496703205376
=== 64-bit wrap in the bash mood ===
0
=== variable read ===
42
=== located parse error ===
shit: 1:1: error: Builtin 'calc': cannot evaluate '1 +', Arithmetic: unexpected character.
     1 |  calc "1 +"
       |  ^~~~~~~~~~ here.
=== located division by zero ===
shit: 1:1: error: Builtin 'calc': cannot evaluate '5 / 0', Arithmetic: division by zero.
     1 |  calc "5 / 0"
       |  ^~~~~~~~~~~~ here.
=== no expression ===
shit: 1:1: error: calc: Not enough arguments.
     1 |  calc
       |  ^~~~ here.
shit: note: calc --help for more info.
rc=2
